Fix max health being too high, Add missing buffs, Adjust defaults, Upgrade to mod translation class builder, Fix and fill all buff descriptions, Make config better

--- a/i18n/default.json
+++ b/i18n/default.json
@@ -1,34 +1,57 @@
 {
+  "info.text": "Changes made outside the main menu require sleeping or reloading the save.\n",
+
   "enabled.label": "Enabled",
   "buff-power.label": "Buff Power",
-  "attack-options.label": "Attack Buff",
-  "attack-buff.tooltip": "Attack granted per Stardrop. Default: 5",
-  "defense-options.label": "Defense Buff",
-  "defense-buff.tooltip": "Defense granted per Stardrop. Default: 3",
-  "immunity-options.label": "Immunity Buff",
-  "immunity-buff.tooltip": "Immunity granted per Stardrop. Default: 3",
-  "health-options.label": "Health Buff",
-  "health-buff.tooltip": "Max health granted per Stardrop. Default: 15",
-  "health-reset.label": "Reset Max Health",
-  "health-reset.tooltip": "Set true if your max health is wrong.",
-  "stamina-options.label": "Stamina Buff",
-  "stamina-buff.tooltip": "Max stamina granted per Stardrop. Default 6",
-  "combat-options.label": "Combat Skill Level Buff",
-  "combat-buff.tooltip": "Bonus combat skill levels granted per Stardrop. Default: 1",
-  "farming-options.label": "Farming Skill Level Buff",
-  "farming-buff.tooltip": "Bonus farming skill levels granted per Stardrop. Default: 1",
-  "fishing-options.label": "Fishing Skill Level Buff",
-  "fishing-buff.tooltip": "Bonus fishing skill levels granted per Stardrop. Default: 1",
-  "foraging-options.label": "Foraging Skill Level Buff",
-  "foraging-buff.tooltip": "Bonus foraging skill levels granted per Stardrop. Default: 1",
-  "luck-options.label": "Luck Skill Level Buff",
-  "luck-buff.tooltip": "Bonus luck skill levels granted per Stardrop. Default: 1",
-  "mining-options.label": "Mining Skill Level Buff",
-  "mining-buff.tooltip": "Bonus mining skill levels granted per Stardrop. Default: 1",
-  "magnetic-options.label": "Magnetic Radius Buff",
-  "magnetic-buff.tooltip": "Magnetic radius increase granted per Stardrop. Default: 1",
-  "debugging.label": "Debugging Options",
-  "smapi.label": "Show SMAPI Logging",
-  "smapi.tooltip": "Shows informational logs in SMAPI console",
-  "more-settings.text": "More settings available in main menu."
+
+  "debugging.label": "Debugging",
+  "enable-logging.label": "Enable Logging",
+  "enable-logging.tooltip": "Shows informational logs in SMAPI console.",
+
+  "general-page.label": "General Buffs",
+  "health-buff.label": "Health Buff",
+  "health-buff.tooltip": "Max Health granted per Stardrop.\nDefault: 14",
+  "health-regen.label": "Health Regen",
+  "health-regen.tooltip": "Health regen per second.\nDefault: 0.15",
+  "stamina-buff.label": "Stamina Buff",
+  "stamina-buff.tooltip": "Max Stamina granted per Stardrop.\nDefault 6",
+  "stamina-regen.label": "Stamina Regen",
+  "stamina-regen.tooltip": "Stamina regen per second.\nDefault: 0.15",
+  "magnetic-buff.label": "Magnetic Radius Buff",
+  "magnetic-buff.tooltip": "Every 64 points of Magnetic Radius increase should equate to about 1 tile distance.\nDefault: 64",
+  "speed-buff.label": "Speed Buff",
+  "speed-buff.tooltip": "Increases movement speed, including while mounted (1 point is equivalent to coffee speed).\nDefault: 0.3",
+
+  "combat-page.label": "Combat Buffs",
+  "attack-buff.label": "Attack Buff",
+  "attack-buff.tooltip": "Direct damage increase.\nDefault: 3",
+  "attack-multiplier-buff.label": "Attack Multiplier Buff",
+  "attack-multiplier-buff.tooltip": "Multiplies the player's attack damage.\nDefault: 0.03",
+  "critical-chance-multiplier-buff.label": "Critical Chance Multiplier Buff",
+  "critical-chance-multiplier-buff.tooltip": "Multiplies the player's critical hit chance.\nDefault: 0.03",
+  "critical-power-multiplier-buff.label": "Critical Power Multiplier Buff",
+  "critical-power-multiplier-buff.tooltip": "Multiplies the player's critical damage.\nDefault: 0.03",
+  "knockback-multiplier-buff.label": "Knockback Multiplier Buff",
+  "knockback-multiplier-buff.tooltip": "Multiplies monster knockback when hit by player.\nDefault: 0.03",
+  "weapon-speed-multiplier-buff.label": "Weapon Speed Multiplier Buff",
+  "weapon-speed-multiplier-buff.tooltip": "Multiplies weapon swing speed.\nDefault: 0.03",
+  "defense-buff.label": "Defense Buff",
+  "defense-buff.tooltip": "Each point of Defense reduces incoming damage by 1.\nDefault: 3",
+  "immunity-buff.label": "Immunity Buff",
+  "immunity-buff.tooltip": "Each point of Immunity reduces chance to be debuffed by 9.1%.\nDefault: 0.43",
+
+  "skills-page.label": "Skill Buffs",
+  "skills-info.text": "Every point of proficiency reduces energy cost by 0.1.",
+  "combat-buff.label": "Combat Skill Level Buff",
+  "combat-buff.tooltip": "Every point in Combat increases HP by 5.\nDefault: 0.72",
+  "farming-buff.label": "Farming Skill Level Buff",
+  "farming-buff.tooltip": "Every point in Farming increases Hoe and Watering Can proficiency by 1.\nDefault: 0.72",
+  "fishing-buff.label": "Fishing Skill Level Buff",
+  "fishing-buff.tooltip": "Increasing Fishing has many benefits, check the wiki for more info.\nDefault: 0.72",
+  "foraging-buff.label": "Foraging Skill Level Buff",
+  "foraging-buff.tooltip": "Every point in Foraging increases Axe proficiency by 1 and the chance of quality forage if you don't have the Botanist Profession.\nDefault: 0.72",
+  "luck-buff.label": "Luck Skill Level Buff",
+  "luck-buff.tooltip": "Not implemented in base game, unsure if it works with the Luck Skill mod.\nDefault: 0.72",
+  "mining-buff.label": "Mining Skill Level Buff",
+  "mining-buff.tooltip": "Every point in Mining increases Pickaxe proficiency by 1.\nDefault: 0.72"
 }
